tests/snapshots/regression-projection-siege_alone.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Revelation
ship/capacitorStablePercentage               = 84.027778
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 7.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 49.200000
ship/passiveShieldEffectiveRechargeRate      = 29.923371
ship/passiveShieldRechargeRate               = 21.694444
ship/ehp                                     = 607050.136253
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.130000
ship/armorKineticDamageEffectiveResonance    = 0.150000
ship/armorExplosiveDamageEffectiveResonance  = 0.160000
ship/armorEmDamageEffectiveResonance         = 0.100000
ship/shieldEhp                               = 134655.170753
ship/hullEhp                                 = 210820.890271
ship/armorEhp                                = 261574.075229
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.540000
ship/damagePerSecondWithReload               = 2562.368285
ship/damagePerSecondWithoutReload            = 2562.371251
ship/damageAlpha                             = 22138.887610
ship/powerFree                               = 646250.000000
ship/cpuFree                                 = 636.500000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 69.444444
ship/capacitorPeakDelta                      = 39.457071
ship/capacitorPeakLoad                       = 17.361111
ship/capacitorPeakRecharge                   = 56.818182
ship/alignTime                               = 298.761163
ship/mass                                    = 12900000000.000000
ship/hp                                      = 141250.000000
ship/powerOutput                             = 875000.000000
ship/powerLoad                               = 228750.000000
ship/maxVelocity                             = 0.000000
ship/cpuOutput                               = 812.500000
ship/cpuLoad                                 = 176.000000
ship/rechargeRate                            = 3300000.000000
ship/agility                                 = 0.016706
ship/maxTargetRange                          = 121875.000000
ship/scanSpeed                               = 5625.000000
ship/warpScrambleStatus                      = 100.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanRadarStrength                       = 49.200000
ship/shieldCapacity                          = 97625.000000
ship/armorHP                                 = 141250.000000
ship/armorEmDamageResonance                  = 0.400000
ship/armorExplosiveDamageResonance           = 0.640000
ship/armorKineticDamageResonance             = 0.600000
ship/armorThermalDamageResonance             = 0.520000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 11250000.000000
ship/capacitorCapacity                       = 75000.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 100.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveRange                          = 7.000000
ship/jumpDriveConsumptionAmount              = 1500.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.712500
ship/gateScrambleStatus                      = 1.000000
ship/sensorDampenerResistance                = 0.300000
ship/weaponDisruptionResistance              = 0.300000
ship/remoteRepairImpedance                   = 0.000001
ship/remoteAssistanceImpedance               = 0.200000
ship/ECMResistance                           = 0.000010
ship/shipBonusDreadnoughtA1                  = 25.000000
ship/shipBonusDreadnoughtA2                  = -20.000000
ship/shipBonusDreadnoughtA3                  = -50.000000
ship/disallowTethering                       = 1.000000
ship/disallowDocking                         = 1.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000
ship/remoteCapacitorImpedance                = 0.000001

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                = Siege Module II
high_1/state               = active
high_1/consumptionQuantity = 125.000000

high_2/type                         = Dual Giga Pulse Laser II
high_2/state                        = active
high_2/damageVolley                 = 22138.887610
high_2/speedWithReload              = 8640.010000
high_2/speedOfReload                = 0.010000
high_2/damagePerSecondWithReload    = 2562.368285
high_2/damagePerSecondWithoutReload = 2562.371251
high_2/capacitorPeakLoad            = 17.361111
high_2/cycleTime                    = 8640.000000
high_2/capacitorNeed                = 150.000000
high_2/power                        = 123750.000000
high_2/cpu                          = 66.000000
high_2/speed                        = 8640.000000
high_2/maxRange                     = 28875.000000
high_2/damageMultiplier             = 156.348070
high_2/falloff                      = 25000.000000
high_2/trackingSpeed                = 0.033676
high_2/entityFlyRange               = 250.000000
high_2/heatDamage                   = 1.800000
high_2/charge/type                  = Conflagration XL
high_2/charge/damageMultiplier      = 1.100000
